--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,19 @@
     -->
     <title>React App</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script>
+    if (!Object.entries) {
+      Object.entries = function( obj ){
+        var ownProps = Object.keys( obj ),
+            i = ownProps.length,
+            resArray = new Array(i); // preallocate the Array
+        while (i--)
+          resArray[i] = [ownProps[i], obj[ownProps[i]]];
+        
+        return resArray;
+      };
+    }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
